[package]
name = "learning_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
pollster = "0.2.5"
wgpu = "0.14.2"
winit = "0.27.5"
anyhow = "1.0.66"

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

 

 